--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h1 {
   align-items: center;
   justify-content: center;
   justify-content: space-evenly;
+  margin-bottom: 80px;
 }
 .about-text {
   width: 300px;
@@ -77,3 +78,34 @@ h1 {
 .projects {
   background-color: rgb(185, 222, 243);
 }
+.project1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.project2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.project-img {
+  width: 400px;
+  margin: 30px;
+  border: 1px solid green;
+}
+.project-img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* .row {
+  margin: 20px;
+}
+.card {
+  margin: 20px;
+}
+.btn btn-primary {
+  color: blueviolet;
+} */
