--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
 body {
   overflow-x: hidden;
 }
+a {
+  text-decoration: none;
+  list-style-type: none;
+  color: white;
+}
 .hero-section span {
   color: rgb(41, 170, 240);
 }
@@ -26,17 +31,23 @@ body {
 
 .hero-img {
   max-width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/images/tim-schmidbauer-Ss3Pa3K3mjQ-unsplash.jpg");
+  height: 90vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("/images/yogendra-singh-veiypZ5Qk3E-unsplash\ \(1\).jpg");
   background-repeat: no-repeat;
   background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
 }
 .hero-text {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  align-self: center;
+  flex: 1;
 }
 .hero-text img {
   width: 200px;
@@ -56,6 +67,10 @@ h1 {
   width: 100%;
   height: 100%;
   border-radius: 200px 200px 0 0;
+}
+h2 {
+  display: flex;
+  justify-content: center;
 }
 .about-me {
   display: flex;
@@ -94,6 +109,7 @@ h1 {
   width: 400px;
   margin: 30px;
   border: 1px solid green;
+  box-shadow: ;
 }
 .project-img img {
   max-width: 100%;
@@ -114,9 +130,15 @@ h1 {
   width: 100%;
   clear: both;
 }
-form message {
-  background-color: blue;
+input {
+  background-color: rgb(185, 222, 243);
 }
+input[type="button"] {
+  width: 20%;
+  margin: 10px 0;
+  display: flex;
+}
+
 /* .row {
   margin: 20px;
 }
