--- a/css/style.css
+++ b/css/style.css
@@ -87,18 +87,23 @@ h2 {
   margin-bottom: 10px;
 }
 .about-details button {
-  margin-top: 20px;
+  margin-top: 50px;
   background-color: rgb(185, 222, 243);
   color: black;
   border-radius: 5px;
   padding: 5px;
 }
+.about-details p {
+  padding-bottom: 20px;
+}
 .about-text span {
   text-decoration: underline rgb(41, 170, 240);
 }
 .about-details {
-  /* border: 1px solid rgb(203, 208, 209); */
   margin-top: 20px;
+  border: 1px solid rgb(41, 170, 240);
+  padding: 20px;
+  padding-bottom: 15px;
 }
 .projects {
   background-color: rgb(185, 222, 243);
