--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body {
   overflow-x: hidden;
 }
-a {
+.navlinks a {
   text-decoration: none;
   list-style-type: none;
   color: white;
@@ -107,6 +107,12 @@ h2 {
 }
 .projects {
   background-color: rgb(185, 222, 243);
+}
+.projects a {
+  color: black;
+  text-decoration: none;
+  list-style-type: none;
+  margin-top: 10px;
 }
 .project1 {
   display: flex;
