--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body {
   overflow-x: hidden;
 }
-.navlinks a {
+.navbar a {
   text-decoration: none;
   list-style-type: none;
   color: white;
@@ -108,11 +108,13 @@ h2 {
 .projects {
   background-color: rgb(185, 222, 243);
 }
+.projects h2 {
+  padding-top: 20px;
+}
 .projects a {
   color: black;
   text-decoration: none;
   list-style-type: none;
-  margin-top: 10px;
 }
 .project1 {
   display: flex;
@@ -129,7 +131,8 @@ h2 {
 .project-img {
   width: 400px;
   margin: 30px;
-  border: 1px solid green;
+  border: 1px solid rgb(41, 170, 240);
+  padding: 10px;
   box-shadow: ;
 }
 .project-img img {
@@ -150,12 +153,19 @@ h2 {
 .contact input {
   width: 100%;
   clear: both;
+  padding: 5px;
+  border: none;
 }
 input {
   background-color: rgb(185, 222, 243);
 }
 input[type="button"] {
-  width: 20%;
+  width: 15%;
   margin: 10px 0;
   display: flex;
+  background-color: rgb(41, 170, 240);
+}
+form :nth-child(9) {
+  background-color: rgb(163, 215, 245);
+  padding: 50px;
 }
