--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ h2 {
 }
 .projects a {
   color: black;
-  text-decoration: none;
+  text-decoration-color: rgb(41, 170, 240);
   list-style-type: none;
 }
 .project1 {
@@ -145,7 +145,7 @@ h2 {
 .project-img {
   width: 400px;
   margin: 30px;
-  /* border: 0.5px solid rgb(41, 170, 240); */
+
   padding: 10px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
@@ -187,8 +187,4 @@ form :nth-child(9) {
 h4 {
   font-family: "Old Standard TT", serif;
   font-size: x-large;
-}
-.fa-solid {
-  color: yellow;
-  width: 100px;
 }
