--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,12 @@ body {
   overflow-x: hidden;
   font-family: "Open Sans", sans-serif;
 }
-#name {
+#name,
+h1 {
   font-size: xx-large;
   font-family: "Old Standard TT", serif;
 }
+
 .navbar a {
   text-decoration: none;
   list-style-type: none;
@@ -47,7 +49,6 @@ h1 {
     url("/images/yogendra-singh-veiypZ5Qk3E-unsplash\ \(1\).jpg");
   background-repeat: no-repeat;
   background-size: cover;
-
   display: flex;
   flex-direction: column;
   align-content: space-between;
@@ -92,6 +93,7 @@ h2 {
   justify-content: center;
   justify-content: space-evenly;
   margin-bottom: 80px;
+  margin-top: 30px;
 }
 .about-text {
   width: 300px;
@@ -129,12 +131,21 @@ h2 {
   color: black;
   text-decoration-color: rgb(41, 170, 240);
   list-style-type: none;
+  padding-left: 10px;
+  font-weight: 600px;
 }
 .project1 {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+.projects p {
+  padding: 10px;
+  margin-bottom: 20px;
+}
+.projects h3 {
+  padding: 10px 0;
 }
 .project2 {
   display: flex;
@@ -145,7 +156,6 @@ h2 {
 .project-img {
   width: 400px;
   margin: 30px;
-
   padding: 10px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
