--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ h1 {
   list-style-type: none;
   color: white;
 }
+@media screen and (max-width: 420px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .navlinks a:hover {
   color: rgb(41, 170, 240);
 }
@@ -42,6 +48,13 @@ h1 {
   justify-content: space-around;
   padding: 20px;
   color: white;
+}
+@media screen and (max-width: 420px) {
+  .navlinks ul li {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+  }
 }
 h1 {
   padding-bottom: 20px;
@@ -84,6 +97,12 @@ h1 {
   margin-top: 50px;
 }
 @media screen and (max-width: 420px) {
+  .cover-image {
+    width: 350px;
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 720px) {
   .cover-image {
     width: 350px;
     margin-left: 0;
