st:modify background-image path

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h1 {
   max-width: 100%;
   height: 90vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("/images/yogendra-singh-veiypZ5Qk3E.jpg");
+    url("/images/yogendra.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
