--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,13 @@ h1 {
   max-width: 100%;
   height: 90vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("/images/yogendra.jpg");
+    url("/images/yogendra.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-content: space-between;
+  background-color: rgb(185, 222, 243);
 }
 .hero-text {
   display: flex;
